--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav ul {
 /* スマホ時はMENUボタンを表示 */
 #open {
     display: block;
-    background: url("https://github.com/takayan6/test/blob/main/button.png?raw=true");
+    background-image: url("https://github.com/takayan6/test/blob/main/button.png?raw=true");
     background-repeat: no-repeat;
     background-size: contain;
     width: 50px;
@@ -102,7 +102,7 @@ nav ul {
 }
 #close  {
     display: block;
-    background: url("https://github.com/takayan6/test/blob/main/button2.png?raw=true");
+    background-image: url("https://github.com/takayan6/test/blob/main/button2.png?raw=true");
     background-repeat: no-repeat;
     background-size: contain;
     width: 50px;
