--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav ul {
 /* スマホ時はMENUボタンを表示 */
 #open {
     display: block;
-    background: url(../img/button.png);
+    background: url(https://github.com/takayan6/test/blob/main/button.png?raw=true);
     background-repeat: no-repeat;
     background-size: contain;
     width: 50px;
